css/main.css
@font-face {
    font-family: universBlack;
    src: url(../fonts/Univers-Black-Oblique.ttf);
}

* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  line-height: 1;
}

body{
  position: relative;
  height: 100vh;
  width: 100vw;
  display: flex;
  align-items: center;
  font-family: sans-serif;
  font-size: 12px;
}

h1{
  font-family: universBlack;
  font-size: 15vw;
  white-space: nowrap;
  letter-spacing: 0.02em;
  font-weight: 100;
  user-select: none;
  padding-left: 100%;
  animation: 3s linear 0s ticker infinite;
}


.contact{
  text-align: center;
  width: 100%;
  position: absolute;
  bottom: 10vh;
}

#mute{
  color: red;
}

a{
  text-decoration: none;
  margin: 0 0.15em;
  color: blue;
}

a:visited{
  color: blue;
}

@keyframes ticker {
  0% {
    transform: translate3d(0, 0, 0);
  }
  100% {
    transform: translate3d(-100%, 0, 0);
  }
}

